[package]
name = "hello-tide"
version = "0.1.0"
authors = ["Seong Yong-ju <sei40kr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.5.1"

[dependencies.async-std]
version = "1.4.0"
features = ["attributes"]
